# kindle2pdf

./: .gitignore  README.md  kindle2pdf.py  pdf2remarkable.py  pyproject.toml
src/: __init_.py  kindle2pdf.py  pdf2remarkable.py  utils.py
