[tool.poetry]
name = "kindle2pdf"
version = "0.1.8"
description = ""
authors = ["Robert Dargavel Smith <teticio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^4.1.0"
cryptography = "^42.0.5"
svglib = "^1.5.1"
browser-cookie3 = "^0.19.1"
tqdm = "^4.66.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kindle2pdf = "kindle2pdf:main"
