[tool.poetry]
name = "kindle2pdf"
version = "0.4.1"
description = ""
authors = ["Robert Dargavel Smith <teticio@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^4.1.0"
cryptography = "^42.0.5"
svglib = "^1.5.1"
browser-cookie3 = "^0.19.1"
tqdm = "^4.66.2"
requests = "^2.31.0"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kindle2pdf = "src.kindle2pdf:main"
pdf2remarkable = "src.pdf2remarkable:main"
